[tool.poetry]
name = "cisco-mdt-collector"
version = "0.1.0"
description = ""
authors = ["targuan <targuan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
elasticsearch = "^7.9.1"
cisco-mdt = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
